# models/shared.js
@@ -3,7 +3,7 @@ const sequelize = require('../config/database');
 const User = require('./user');
 const Playlist = require('./playlist');
 
-const SharedUser = sequelize.define('SharedUser', {
+const SharedUser = sequelize.define('Shared', {
   id: {
     type: DataTypes.INTEGER,
     autoIncrement: true,
@@ -35,16 +35,8 @@ const SharedUser = sequelize.define('SharedUser', {
   },
 }, {
   timestamps: false,
-  tableName: 'shared_users',
+  tableName: 'shared',
 });
 
-SharedUser.belongsTo(User, { as: 'Owner', foreignKey: 'ownerId' });
-SharedUser.belongsTo(Playlist, { foreignKey: 'playlistId' });
-SharedUser.belongsTo(User, { as: 'Friend', foreignKey: 'friendId' });
-
-
-User.hasMany(SharedUser, { as: 'OwnedShares', foreignKey: 'ownerId' });
-User.hasMany(SharedUser, { as: 'ReceivedShares', foreignKey: 'friendId' });
-Playlist.hasMany(SharedUser, { foreignKey: 'playlistId' });
 
 module.exports = SharedUser;
